tests/baselines/reference/typeFromPropertyAssignment17.errors.txt
tests/cases/conformance/salsa/minimatch.js(1,1): error TS2304: Cannot find name 'module'.
tests/cases/conformance/salsa/use.js(1,12): error TS2304: Cannot find name 'require'.


==== tests/cases/conformance/salsa/use.js (1 errors) ====
    var mini = require('./minimatch')
               ~~~~~~~
!!! error TS2304: Cannot find name 'require'.
    mini.M.defaults()
    var m = new mini.M()
    m.m()
    mini.filter()
    
==== tests/cases/conformance/salsa/minimatch.js (1 errors) ====
    module.exports = minimatch
    ~~~~~~
!!! error TS2304: Cannot find name 'module'.
    minimatch.M = M
    minimatch.filter = filter
    function filter() {
        return minimatch()
    }
    function minimatch() {
    }
    M.defaults = function (def) {
        return def
    }
    M.prototype.m = function () {
    }
    function M() {
    }
    